Changed semantics of the EIGEN_GNUC_AT_* version check macros

For better or worse, __GNUC__ and __GNUC_MINOR__ are defined by several compilers (gcc, clang, and AppleClang at least) and these different compilers do not follow compatible version numbers.

Many version checks, based on code comments and commit messages, are clearly trying to check for some verson of gcc proper, but by looking at the __GNUC__ / __GNUC_MINOR__ they are inadvertantly checking against clang (and its variants) too.

Therefore:

1. changed the EIGEN_GNUC_AT_* macros to apply only to gcc proper (EIGEN_COMP_GNUC -> EIGEN_COMP_GNUC_STRICT).

2. renamed them to have STRICT in the name.

3. changed the semantics of EIGEN_GNUC_AT_MOST from <= to <

In some cases the version check behaviour was changed!

Three notable such cases:

1. a workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=70963 that had incorrect version tests. That ticket says gcc 7.0 is affected, but it's not clear what version it's actually fixed for so assume 7.1.

2. a gcc version check that was incorrectly changed when gcc 5 for c++14 support became the minimum.

3. conditionalized some GCC workarounds to apply only to older versions.